--- a/trunk/kernel/Makefile
+++ b/trunk/kernel/Makefile
@@ -1,6 +1,9 @@
 #make file kernel
 OBJS += kernel/kernel.o \
 	kernel/mboot.o \
-	kernel/kheap.o 
+	kernel/kheap.o \
+	kernel/que.o \
+	kernel/task.o 
+
 
 	
