Initial tasking from  NanoOS ported. for this A self containing que system is developed.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,9 @@
 #make file kernel
 OBJS += kernel/kernel.o \
 	kernel/mboot.o \
-	kernel/kheap.o 
+	kernel/kheap.o \
+	kernel/que.o \
+	kernel/task.o 
+
 
 	
