--- a/driver/ide/Makefile
+++ b/driver/ide/Makefile
@@ -1,5 +1,6 @@
 #driver make file
 OBJS += driver/ide/helper.o \
 	driver/ide/atarw.o \
-	driver/ide/ide.o 
+	driver/ide/ide.o \
+	driver/ide/drive.o 
 
